chore: added proper metadata to the index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/wooster-face-front-no-bg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wooster</title>
+    <meta
+      name="description"
+      content="Wooster - Your Trip Companion for personalized AI-assisted journeys."
+    />
+
+    <!-- Open Graph tags for social sharing -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Wooster" />
+    <meta
+      property="og:description"
+      content="Your Trip Companion - An AI-powered travel app to enhance your journeys."
+    />
+    <meta property="og:image" content="/wooster-face-front-no-bg.png" />
+
+    <meta property="og:url" content="https://www.trywooster.live" />
+
+    <link rel="icon" type="image/png" href="/wooster-face-front-no-bg.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
