chore: fixed image link in metadata

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       property="og:description"
       content="Your Trip Companion - An AI-powered travel app to enhance your journeys."
     />
-    <meta property="og:image" content="/wooster-face-front-no-bg.png" />
+    <meta property="og:image" content="https://www.trywooster.live/wooster-face-front-no-bg.png" />
 
     <meta property="og:url" content="https://www.trywooster.live" />
 
