chore: updated metadata preview text

--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     <!-- Open Graph tags for social sharing -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Wooster" />
-    <meta
-      property="og:description"
-      content="Your Trip Companion - An AI-powered travel app to enhance your journeys."
-    />
+    <meta property="og:description" content="Your AI-Driven Trip Planning Assistant" />
     <meta property="og:image" content="https://www.trywooster.live/wooster-face-front-no-bg.png" />
 
     <meta property="og:url" content="https://www.trywooster.live" />
